get drone by serial number and get loaded medications by serial number
