# docs/swagger.json
@@ -96,7 +96,7 @@
                 }
             }
         },
-        "/drone/{id}/medications": {
+        "/drone/{serial_number}/medications": {
             "get": {
                 "description": "checking loaded medication items for a given drone",
                 "consumes": [
@@ -111,9 +111,9 @@
                 "summary": "Get Loaded Medications",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "Drone ID",
-                        "name": "id",
+                        "type": "string",
+                        "description": "Serial Number",
+                        "name": "serial_number",
                         "in": "path",
                         "required": true
                     }
@@ -191,12 +191,16 @@
             "enum": [
                 "IDLE",
                 "LOADING",
+                "LOADED",
+                "DELIVERING",
                 "DELIVERED",
                 "RETURNING"
             ],
             "x-enum-varnames": [
                 "IDLE",
                 "LOADING",
+                "LOADED",
+                "DELIVERING",
                 "DELIVERED",
                 "RETURNING"
             ]
@@ -204,14 +208,14 @@
         "entity.LoadMedicationsRequest": {
             "type": "object",
             "properties": {
-                "drone_id": {
-                    "type": "integer"
-                },
                 "medications": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/entity.MedicationRequest"
                     }
+                },
+                "serial_number": {
+                    "type": "string"
                 }
             }
         },
